--- a/healty/book.html
+++ b/healty/book.html
@@ -9,7 +9,7 @@
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="book-a-table.css" />
+    <link rel="stylesheet" href="stylee/style.css" />
   </head>
   <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-light shadow">
